--- a/templates/add_comp.html
+++ b/templates/add_comp.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="form-group">
                             <input type="date" name="drive_date" 
-                                class="form-control form-control-sm bg-light" 
+                                class="form-control form-control-sm bg-light" min={{t_date}}
                                 placeholder="Drive Date">
                         </div>
 
