--- a/templates/home3.html
+++ b/templates/home3.html
@@ -81,7 +81,7 @@
 </div> -->
          
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Placement Manager</a>
+  <a class="navbar-brand" href="/home">Placement Manager</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -89,7 +89,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/home">Dashboard <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/dashboard">Dashboard <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/profile">Profile</a>
@@ -120,8 +120,9 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </ul>
   </div>
-         
          </nav>
+             
+         
          {% block content %}
          
          {% endblock %}
