--- a/templates/adminlogin.html
+++ b/templates/adminlogin.html
@@ -52,7 +52,10 @@
       </li>
          <li class="nav-item">
         <a class="nav-link" href="/add_company">Add Company</a>
-      </li>
+      </li><!--
+        <li class="nav-item">
+        <a class="nav-link" href="/add_selected_students">Add Selected students</a>
+      </li>-->
          <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
       </li>
