Admin Dashboard Added

--- a/templates/adminlogin.html
+++ b/templates/adminlogin.html
@@ -45,7 +45,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/adminlogin">Dashboard <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/admin_dashboard">Dashboard <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/view_companies">View Companies</a>
